(ui) Fix position of buttons in card footer on mobile

--- a/src/app/styles/_cards.scss
+++ b/src/app/styles/_cards.scss
@@ -116,7 +116,9 @@
       margin: .5rem 0;
 
       &:not(:last-child) {
-        margin-right: 1rem;
+        @media screen and (min-width: $md-min) {
+          margin-right: 1rem;
+        }
       }
     }
   }
